--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,8 +49,8 @@ input::-webkit-inner-spin-button {
 }
 
 body {
-	background-color: #030303;
-	color: #fff;
+	background-color: white;
+	color: #121212;
 }
 
 .app {
